--- a/GameCode/GameCode.csproj
+++ b/GameCode/GameCode.csproj
@@ -20,6 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="game\Camera.cs" />
     <Compile Include="game\GameCode.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
