--- a/SolarEditor/SolarEditor.csproj
+++ b/SolarEditor/SolarEditor.csproj
@@ -25,6 +25,7 @@
     <Compile Include="content\ModelImporter.cs" />
     <Compile Include="EditorConfig.cs" />
     <Compile Include="EditorState.cs" />
+    <Compile Include="FlyCamera.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="windows\Window.cs" />
   </ItemGroup>
