--- a/SolarSharp/SolarSharp.csproj
+++ b/SolarSharp/SolarSharp.csproj
@@ -24,9 +24,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="collision\Ray.cs" />
+    <Compile Include="collision\Intersection.cs" />
+    <Compile Include="collision\Primitives.cs" />
+    <Compile Include="collision\Raycast.cs" />
     <Compile Include="core\Application.cs" />
     <Compile Include="core\ApplicationConfig.cs" />
+    <Compile Include="core\Camera.cs" />
+    <Compile Include="core\Debug.cs" />
     <Compile Include="core\EventSystem.cs" />
     <Compile Include="core\Input.cs" />
     <Compile Include="core\MeshFactory.cs" />
@@ -52,6 +56,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Programs\Debug.hlsl" />
     <None Include="Programs\FirstShader.hlsl" />
   </ItemGroup>
 
