--- a/SolarSharp/SolarSharp.csproj
+++ b/SolarSharp/SolarSharp.csproj
@@ -49,17 +49,23 @@
     <Compile Include="math\Vector4.cs" />
     <Compile Include="rendering\D3D11.cs" />
     <Compile Include="rendering\GraphicsShader.cs" />
+    <Compile Include="rendering\graph\CMDClearDepthTarget.cs" />
+    <Compile Include="rendering\graph\CMDClearColourTargetNode.cs" />
+    <Compile Include="rendering\graph\CMDDrawSceneNode.cs" />
     <Compile Include="rendering\graph\GetGraphicsShaderNode.cs" />
+    <Compile Include="rendering\graph\GetSwapChainNode.cs" />
     <Compile Include="rendering\graph\Node.cs" />
+    <Compile Include="rendering\graph\pins\DepthTargetPin.cs" />
     <Compile Include="rendering\graph\pins\FlowPin.cs" />
     <Compile Include="rendering\graph\pins\IntPin.cs" />
     <Compile Include="rendering\graph\pins\GraphicsShaderPin.cs" />
-    <Compile Include="rendering\graph\pins\PinInputType.cs" />
+    <Compile Include="rendering\graph\pins\ColourTargetPin.cs" />
     <Compile Include="rendering\graph\SetDepthNode.cs" />
     <Compile Include="rendering\graph\pins\Pin.cs" />
     <Compile Include="rendering\graph\RenderGraph.cs" />
     <Compile Include="rendering\graph\SetRasterizerNode.cs" />
     <Compile Include="rendering\graph\SetGraphicsShaderNode.cs" />
+    <Compile Include="rendering\graph\SetRenderTargetsNode.cs" />
     <Compile Include="rendering\graph\SetTopologyNode.cs" />
     <Compile Include="rendering\graph\SetViewPortNode.cs" />
     <Compile Include="rendering\ImGui.cs" />
