--- a/SolarEditor/SolarEditor.csproj
+++ b/SolarEditor/SolarEditor.csproj
@@ -20,12 +20,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="content\ContentProcessor.cs" />
     <Compile Include="content\MetaFileAsset.cs" />
     <Compile Include="content\ModelImporter.cs" />
+    <Compile Include="content\TextureImporter.cs" />
     <Compile Include="EditorState.cs" />
     <Compile Include="FlyCamera.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="windows\AssetWindow.cs" />
+    <Compile Include="windows\ConsoleWindow.cs" />
     <Compile Include="windows\GameSceneWindow.cs" />
     <Compile Include="windows\RenderGraphWindow.cs" />
     <Compile Include="windows\EditorWindow.cs" />
@@ -33,6 +35,7 @@
 
   <ItemGroup>
     <PackageReference Include="AssimpNet" Version="4.1.0" />
+    <PackageReference Include="StbImageSharp" Version="2.27.8" />
   </ItemGroup>
 
   <ItemGroup>
