--- a/SolarEditor/SolarEditor.csproj
+++ b/SolarEditor/SolarEditor.csproj
@@ -27,6 +27,8 @@
     <Compile Include="FlyCamera.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="windows\AssetWindow.cs" />
+    <Compile Include="windows\DebugWindow.cs" />
+    <Compile Include="windows\ShaderEditorWindow.cs" />
     <Compile Include="windows\ConsoleWindow.cs" />
     <Compile Include="windows\GameSceneWindow.cs" />
     <Compile Include="windows\RenderGraphWindow.cs" />
