--- a/SolarSharp/SolarSharp.csproj
+++ b/SolarSharp/SolarSharp.csproj
@@ -33,8 +33,10 @@
     <Compile Include="core\Application.cs" />
     <Compile Include="core\ApplicationConfig.cs" />
     <Compile Include="core\Clock.cs" />
+    <Compile Include="core\DebugDraw.cs" />
     <Compile Include="core\EventSystem.cs" />
     <Compile Include="core\Input.cs" />
+    <Compile Include="rendering\DynamicMesh.cs" />
     <Compile Include="rendering\StaticTexture.cs" />
     <Compile Include="tools\MeshFactory.cs" />
     <Compile Include="core\RenderPacket.cs" />
