--- a/x64/Debug/imgui.ini
+++ b/x64/Debug/imgui.ini
@@ -24,8 +24,8 @@ Size=678,940
 Collapsed=0
 
 [Window][Assets ]
-Pos=71,375
-Size=807,324
+Pos=209,493
+Size=1155,393
 Collapsed=0
 
 [Window][Example: Simple layout]
@@ -104,7 +104,7 @@ Size=1296,725
 Collapsed=0
 
 [Window][Current Scene]
-Pos=322,532
+Pos=317,530
 Size=889,344
 Collapsed=0
 
@@ -116,5 +116,10 @@ Collapsed=0
 [Window][Create Model Asset]
 Pos=593,399
 Size=658,229
+Collapsed=0
+
+[Window][Entity inspector]
+Pos=179,61
+Size=449,279
 Collapsed=0
 
