--- a/x64/Release/imgui.ini
+++ b/x64/Release/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Shader editor]
-Pos=1072,75
-Size=756,496
+Pos=377,627
+Size=820,556
 Collapsed=0
 
 [Window][Assets ]
-Pos=197,320
-Size=537,349
+Pos=201,131
+Size=773,375
 Collapsed=0
 
 [Window][Current Scene]
@@ -26,5 +26,10 @@ Collapsed=0
 [Window][Render Graph]
 Pos=812,70
 Size=813,730
+Collapsed=0
+
+[Window][Entity inspector]
+Pos=60,60
+Size=498,264
 Collapsed=0
 
