--- a/SolarEditor/SolarEditor.csproj
+++ b/SolarEditor/SolarEditor.csproj
@@ -28,6 +28,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="windows\AssetWindow.cs" />
     <Compile Include="windows\DebugWindow.cs" />
+    <Compile Include="windows\EntityWindow.cs" />
     <Compile Include="windows\ShaderEditorWindow.cs" />
     <Compile Include="windows\ConsoleWindow.cs" />
     <Compile Include="windows\GameSceneWindow.cs" />
