--- a/x64/Debug/imgui.ini
+++ b/x64/Debug/imgui.ini
@@ -19,13 +19,13 @@ Size=778,646
 Collapsed=0
 
 [Window][Shader editor]
-Pos=594,0
+Pos=1095,137
 Size=678,940
 Collapsed=0
 
 [Window][Assets ]
-Pos=452,239
-Size=1155,380
+Pos=555,466
+Size=936,426
 Collapsed=0
 
 [Window][Example: Simple layout]
@@ -104,8 +104,8 @@ Size=1296,725
 Collapsed=0
 
 [Window][Current Scene]
-Pos=317,530
-Size=889,344
+Pos=59,465
+Size=477,344
 Collapsed=0
 
 [Window][adisjd]
@@ -119,7 +119,12 @@ Size=658,229
 Collapsed=0
 
 [Window][Entity inspector]
-Pos=179,61
-Size=449,279
+Pos=1373,21
+Size=520,222
+Collapsed=0
+
+[Window][Debug window]
+Pos=63,63
+Size=226,104
 Collapsed=0
 
