--- a/x64/Release/imgui.ini
+++ b/x64/Release/imgui.ini
@@ -9,12 +9,12 @@ Size=820,556
 Collapsed=0
 
 [Window][Assets ]
-Pos=201,131
+Pos=202,131
 Size=773,375
 Collapsed=0
 
 [Window][Current Scene]
-Pos=27,115
+Pos=1113,237
 Size=740,483
 Collapsed=0
 
@@ -29,7 +29,12 @@ Size=813,730
 Collapsed=0
 
 [Window][Entity inspector]
-Pos=60,60
+Pos=47,588
 Size=498,264
+Collapsed=0
+
+[Window][Debug window]
+Pos=133,109
+Size=394,183
 Collapsed=0
 
