--- a/x64/Debug/imgui.ini
+++ b/x64/Debug/imgui.ini
@@ -19,12 +19,12 @@ Size=778,646
 Collapsed=0
 
 [Window][Shader editor]
-Pos=544,156
+Pos=1208,34
 Size=678,940
 Collapsed=0
 
 [Window][Assets ]
-Pos=94,605
+Pos=106,513
 Size=936,463
 Collapsed=0
 
@@ -104,7 +104,7 @@ Size=1296,725
 Collapsed=0
 
 [Window][Current Scene]
-Pos=59,465
+Pos=1276,533
 Size=477,344
 Collapsed=0
 
@@ -119,17 +119,22 @@ Size=658,229
 Collapsed=0
 
 [Window][Entity inspector]
-Pos=1374,26
+Pos=1320,126
 Size=520,222
 Collapsed=0
 
 [Window][Debug window]
-Pos=63,63
+Pos=62,64
 Size=226,104
 Collapsed=0
 
 [Window][Model viewer]
 Pos=84,405
 Size=405,424
+Collapsed=0
+
+[Window][Console]
+Pos=67,403
+Size=826,474
 Collapsed=0
 
