--- a/x64/Release/imgui.ini
+++ b/x64/Release/imgui.ini
@@ -9,8 +9,8 @@ Size=820,556
 Collapsed=0
 
 [Window][Assets ]
-Pos=27,102
-Size=773,375
+Pos=920,81
+Size=863,468
 Collapsed=0
 
 [Window][Current Scene]
@@ -29,12 +29,17 @@ Size=813,730
 Collapsed=0
 
 [Window][Entity inspector]
-Pos=45,587
+Pos=46,586
 Size=498,264
 Collapsed=0
 
 [Window][Debug window]
 Pos=133,109
 Size=441,229
+Collapsed=0
+
+[Window][Model viewer]
+Pos=116,88
+Size=823,448
 Collapsed=0
 
