--- a/x64/Release/imgui.ini
+++ b/x64/Release/imgui.ini
@@ -9,7 +9,7 @@ Size=820,556
 Collapsed=0
 
 [Window][Assets ]
-Pos=920,81
+Pos=800,333
 Size=863,468
 Collapsed=0
 
@@ -29,7 +29,7 @@ Size=813,730
 Collapsed=0
 
 [Window][Entity inspector]
-Pos=46,586
+Pos=110,370
 Size=498,264
 Collapsed=0
 
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Model viewer]
 Pos=116,88
 Size=823,448
+Collapsed=0
+
+[Window][Level generator]
+Pos=841,282
+Size=988,406
 Collapsed=0
 
