--- a/x64/Release/imgui.ini
+++ b/x64/Release/imgui.ini
@@ -44,7 +44,12 @@ Size=823,448
 Collapsed=0
 
 [Window][Level generator]
-Pos=841,282
+Pos=842,282
 Size=988,406
+Collapsed=0
+
+[Window][Console]
+Pos=60,60
+Size=863,482
 Collapsed=0
 
